--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -10,7 +10,7 @@
  issn = {0001-0782},
  pages = {251--256},
  numpages = {6},
- url = {http://doi.acm.org/10.1145/359094.359101},
+ url = {https://doi.org/10.1145/359094.359101},
  doi = {10.1145/359094.359101},
  acmid = {359101},
  publisher = {ACM},
@@ -28,7 +28,7 @@
  location = {Ballarat, Victoria, Australia},
  pages = {3--3},
  numpages = {1},
- url = {http://dl.acm.org/citation.cfm?id=1273694.1273695},
+ url = {https://dl.acm.org/doi/10.5555/1273694.1273695},
  acmid = {1273695},
  publisher = {Australian Computer Society, Inc.},
  address = {Darlinghurst, Australia, Australia},
@@ -44,7 +44,7 @@
  location = {San Francisco, California, USA},
  pages = {427--432},
  numpages = {6},
- url = {http://doi.acm.org/10.1145/277044.277165},
+ url = {https://doi.org/10.1145/277044.277165},
  doi = {10.1145/277044.277165},
  acmid = {277165},
  publisher = {ACM},
@@ -64,7 +64,7 @@
  issn = {0010-485X},
  pages = {345--351},
  numpages = {7},
- url = {http://dx.doi.org/10.1007/BF02239976},
+ url = {http://doi.org/10.1007/BF02239976},
  doi = {10.1007/BF02239976},
  acmid = {44146},
  publisher = {Springer-Verlag New York, Inc.},
